--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
-    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <!-- Hello -->
-    <ul>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-video.html">Video playback</a></li>
-      <li><a href="03-feedback.html">Feedback form</a></li>
+    <input type="text" id="search-box" />
+    <ul class="country-list">
+      <li class="item">
+        <svg class="flag" width="30" height="20">
+          <use href="./images/icons.svg#icon-antenna"></use>
+        </svg>
+        Botswana
+      </li>
+      <li></li>
+      <li class="item">
+        <svg class="flag" width="30" height="20">
+          <use href="./images/icons.svg#icon-antenna"></use>
+        </svg>
+        Swaziland
+      </li>
+      <li></li>
+      <li class="item">
+        <svg class="flag" width="30" height="20">
+          <use href="./images/icons.svg#icon-antenna"></use>
+        </svg>
+        Sweden
+      </li>
+      <li></li>
+      <li class="item">
+        <svg class="flag" width="30" height="20">
+          <use href="./images/icons.svg#icon-antenna"></use>
+        </svg>
+        Switzerland
+      </li>
     </ul>
+
+    <div class="country-info">
+      <h1 class="country-title">
+        <svg class="flag" width="30" height="20">
+          <use href="./help/images/icons.svg#icon-antenna"></use>
+        </svg>
+        Switzeland
+      </h1>
+      <p class="parameter"><b>Capital: </b>Bern</p>
+      <p class="parameter"><b>Capital: </b>Bern</p>
+    </div>
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
