--- a/src/index.html
+++ b/src/index.html
@@ -9,44 +9,23 @@
   <body>
     <input type="text" id="search-box" />
     <ul class="country-list">
-      <li class="item">
+      <!-- <li class="item">
         <svg class="flag" width="30" height="20">
-          <use href="./images/icons.svg#icon-antenna"></use>
+          <use href="./help/images/icons.svg#icon-antenna"></use>
         </svg>
         Botswana
-      </li>
-      <li></li>
-      <li class="item">
-        <svg class="flag" width="30" height="20">
-          <use href="./images/icons.svg#icon-antenna"></use>
-        </svg>
-        Swaziland
-      </li>
-      <li></li>
-      <li class="item">
-        <svg class="flag" width="30" height="20">
-          <use href="./images/icons.svg#icon-antenna"></use>
-        </svg>
-        Sweden
-      </li>
-      <li></li>
-      <li class="item">
-        <svg class="flag" width="30" height="20">
-          <use href="./images/icons.svg#icon-antenna"></use>
-        </svg>
-        Switzerland
-      </li>
+      </li> -->
     </ul>
 
     <div class="country-info">
-      <h1 class="country-title">
+      <!-- <h1 class="country-title">
         <svg class="flag" width="30" height="20">
           <use href="./help/images/icons.svg#icon-antenna"></use>
         </svg>
         Switzeland
       </h1>
       <p class="parameter"><b>Capital: </b>Bern</p>
-      <p class="parameter"><b>Capital: </b>Bern</p>
+      <p class="parameter"><b>Capital: </b>Bern</p> -->
     </div>
 
     <script src="index.js" type="module"></script>
